[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/cirno_cursed_sprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/cirno_cursed_sprite2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/StateMachine/Ground.gd" type="Script" id=4]
[ext_resource path="res://Scripts/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Scripts/StateMachine/Air.gd" type="Script" id=6]
[ext_resource path="res://Scripts/StateMachine/Bounce.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 38.8324 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.9048, 5.06846 )

[node name="player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Ground" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
label = NodePath("../../Label")
sprite = NodePath("../../Sprite")
stop_force = 100.0

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
label = NodePath("../../Label")
sprite = NodePath("../../Sprite")
max_vel = 600.0
accel = 40.0
jump_vel = 700.0

[node name="Bounce" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
bounce_timer_node = NodePath("../../bounceOff")
bounce_time = 0.1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 544.328
margin_top = 513.283
margin_right = 584.328
margin_bottom = 527.283
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bounceOff" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 32 )

[node name="detectFloor" type="Area2D" parent="."]
position = Vector2( -0.5, 49 )
input_pickable = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectFloor"]
rotation = 3.14159
shape = SubResource( 2 )
one_way_collision = true

[connection signal="timeout" from="bounceOff" to="StateMachine/Bounce" method="_on_bounceOff_timeout"]
[connection signal="body_entered" from="detectFloor" to="." method="_on_detectFloor" binds= [ true ]]
[connection signal="body_exited" from="detectFloor" to="." method="_on_detectFloor" binds= [ false ]]
